tmp itinearyStep_to_segment
