# itineraries-server/pkg/gen/models/itinerary.go
@@ -1,0 +1,87 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"strconv"
+
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+)
+
+// Itinerary itinerary
+// swagger:model itinerary
+type Itinerary struct {
+
+	// description
+	Description string `json:"Description,omitempty"`
+
+	// itinerary ID
+	ItineraryID string `json:"ItineraryID,omitempty"`
+
+	// segments
+	// Read Only: true
+	Segments []*Segment `json:"Segments"`
+}
+
+// Validate validates this itinerary
+func (m *Itinerary) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateSegments(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Itinerary) validateSegments(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Segments) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.Segments); i++ {
+		if swag.IsZero(m.Segments[i]) { // not required
+			continue
+		}
+
+		if m.Segments[i] != nil {
+			if err := m.Segments[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("Segments" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Itinerary) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Itinerary) UnmarshalBinary(b []byte) error {
+	var res Itinerary
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
