# itineraries-server/pkg/gen/models/segment.go
@@ -1,0 +1,70 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/swag"
+)
+
+// Segment segment
+// swagger:model segment
+type Segment struct {
+
+	// arrival date
+	ArrivalDate string `json:"ArrivalDate,omitempty"`
+
+	// arrival time
+	ArrivalTime string `json:"ArrivalTime,omitempty"`
+
+	// departure date
+	DepartureDate string `json:"DepartureDate,omitempty"`
+
+	// departure time
+	DepartureTime string `json:"DepartureTime,omitempty"`
+
+	// destination
+	Destination string `json:"Destination,omitempty"`
+
+	// distance
+	Distance int64 `json:"Distance,omitempty"`
+
+	// flight number
+	FlightNumber string `json:"FlightNumber,omitempty"`
+
+	// operating carrier
+	OperatingCarrier string `json:"OperatingCarrier,omitempty"`
+
+	// origin
+	Origin string `json:"Origin,omitempty"`
+
+	// segment ID
+	SegmentID int64 `json:"SegmentID,omitempty"`
+}
+
+// Validate validates this segment
+func (m *Segment) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Segment) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Segment) UnmarshalBinary(b []byte) error {
+	var res Segment
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
